--- a/sass/directory/component/_variables.scss
+++ b/sass/directory/component/_variables.scss
@@ -1,5 +1,7 @@
 $primary-color: #9356dc;
 $secondary-color: #ff79da;
 $tertiary-color: #99e2d0;
-$light-grey: #efefef;
-$btn-color: linear-gradient(170deg, $secondary-color, 30%, $primary-color);
+$light-grey: #f6f6f6;
+$footer-color: #363636;
+$item-hover: #f5edff;
+$btn-color: linear-gradient(180deg, $secondary-color, 43%, $primary-color);
