Mise a jour animation ol puce terminé

--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -1,3 +1,5 @@
+@import url(./_mixin.scss);
+@import url(/sass/directory/component/_mixin.scss);
 * {
   margin: 0;
   padding: 0;
@@ -10,6 +12,10 @@ body {
 
 ul {
   list-style-type: none;
+}
+
+ol {
+  list-style-type: decimal;
 }
 
 .titre-shrikhand {
@@ -54,6 +60,7 @@ a:active {
   font-weight: bold;
   text-align: center;
   background: linear-gradient(180deg, #ff79da, 43%, #9356dc);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   color: #fff !important;
   align-self: center;
 }
@@ -75,10 +82,6 @@ a:active {
   cursor: pointer;
   border: none;
   border-radius: 0 10px 10px 0;
-}
-
-.shadow, .li-restaurant .card-restaurant figcaption, .liste-fonctionnement li, .menu, .btn {
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 @keyframes fa-effet {
@@ -122,10 +125,21 @@ form {
   animation-direction: alternate;
 }
 .menu-main h1 .heart:hover {
-  animation: fullHeart 1s;
-  color: #9356dc;
+  animation: fullHeart 2s;
+  background: linear-gradient(180deg, #ff79da, 43%, #9356dc);
+  -webkit-background-clip: text;
 }
 
+@keyframes fullHeart {
+  0% {
+    opacity: 0;
+    height: 0%;
+  }
+  100% {
+    opacity: 1;
+    height: 80%;
+  }
+}
 .article-menu {
   display: flex;
   flex-direction: column;
@@ -150,6 +164,7 @@ form {
   border-radius: 15px;
   display: flex;
   overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   cursor: pointer;
   position: relative;
   animation: menu-effet 1.5s ease-in-out forwards;
@@ -386,8 +401,9 @@ form {
   justify-content: center;
   align-items: center;
   row-gap: 15px;
+  counter-reset: li;
 }
-.liste-fonctionnement li {
+.liste-fonctionnement .step {
   height: 60px;
   width: 90%;
   display: flex;
@@ -397,12 +413,27 @@ form {
   align-items: center;
   font-weight: bold;
   cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   transition: 1s;
+  position: relative;
 }
-.liste-fonctionnement li:hover {
+.liste-fonctionnement .step::before {
+  text-align: center;
+  width: 22px;
+  height: 22px;
+  counter-increment: li;
+  content: counter(li);
+  position: absolute;
+  background-color: #9356dc;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 16px;
+  left: -10px;
+}
+.liste-fonctionnement .step:hover {
   background-color: #f5edff;
 }
-.liste-fonctionnement li:hover .fas {
+.liste-fonctionnement .step:hover .fas {
   transition: 1s;
   color: #9356dc;
 }
@@ -464,6 +495,7 @@ form {
   background-color: #fff;
   border-radius: 0 0 15px 15px;
   overflow-y: hidden;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 .li-restaurant .card-restaurant figcaption .fa-heart {
   font-size: 1.5em;
@@ -473,12 +505,8 @@ form {
 }
 .li-restaurant .card-restaurant figcaption .heart {
   color: transparent;
-  /* transform: scale(0); */
 }
 .li-restaurant .card-restaurant figcaption .heart:hover {
-  /*   transform: scale(1);
-  transition: transform 2s;
-  transform-origin: 0% 0%; */
   animation: fullHeart 2s;
   background: linear-gradient(180deg, #ff79da, 43%, #9356dc);
   -webkit-background-clip: text;
@@ -487,11 +515,11 @@ form {
 @keyframes fullHeart {
   0% {
     opacity: 0;
-    height: 0%;
+    /*     height: 0%; */
   }
   100% {
     opacity: 1;
-    height: 100%;
+    height: 80%;
   }
 }
 @media screen and (min-width: 768px) {
@@ -511,11 +539,12 @@ form {
     flex-direction: row;
     column-gap: 30px;
   }
-  .liste-fonctionnement li {
+  .liste-fonctionnement .step {
     height: 90px;
     width: 28%;
     justify-content: center;
     align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   }
 
   .fa-mobile-alt,
