--- a/sass/directory/base/_base.scss
+++ b/sass/directory/base/_base.scss
@@ -11,6 +11,10 @@ body {
 ul {
   list-style-type: none;
 }
+
+ol {
+  list-style-type: decimal;
+}
 .titre-shrikhand {
   font-family: "Shrikhand", cursive;
   font-size: 32px;
