--- a/sass/directory/pages/_acceuil.scss
+++ b/sass/directory/pages/_acceuil.scss
@@ -139,6 +139,8 @@
     transition: 1s;
     position: relative;
     &::before {
+      display: flex;
+      justify-content: center;
       text-align: center;
       width: 22px;
       height: 22px;
