--- a/sass/directory/component/_component.scss
+++ b/sass/directory/component/_component.scss
@@ -11,6 +11,7 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   color: #fff !important;
   align-self: center;
+  overflow: hidden;
   &:hover {
     scale: 1.1;
     filter: brightness(1.1);
