--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "directory/component/_component.scss";
 @import "directory/component/_mixin.scss";
 @import "directory/component/_keyframes.scss";
+@import "directory/component/-background-image.scss";
 @import "directory/pages/_restaurant-page.scss";
 @import "directory/pages/_acceuil.scss";
 @import "directory/layout/_header.scss";
