--- a/sass/directory/layout/_footer.scss
+++ b/sass/directory/layout/_footer.scss
@@ -6,7 +6,9 @@
     display: flex;
     flex-direction: column;
     row-gap: 5px;
-    color: #fff !important;
+    li a {
+      color: #fff !important;
+    }
   }
 }
 
