--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -64,10 +64,12 @@ a:active {
   color: #fff !important;
   align-self: center;
   overflow: hidden;
+  transition: 800ms;
 }
 .btn:hover {
-  scale: 1.1;
+  scale: 1.06;
   filter: brightness(1.1);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 6px 12px, rgba(0, 0, 0, 0.6) 0px 6px 12px;
 }
 .btn--commander {
   align-self: center;
@@ -96,24 +98,23 @@ a:active {
 }
 .image-menu img {
   width: 100%;
-  height: 100%;
+  height: 110%;
+  position: relative;
+  z-index: 0;
 }
 
 .fa-arrow-left {
   font-size: 1.5em;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-}
-
 .menu-main {
   display: flex;
   flex-direction: column;
+  position: relative;
   padding: 20px 10px 50px 10px;
   background-color: #f6f6f6;
   border-radius: 30px 30px 0 0;
+  z-index: 100;
 }
 .menu-main h1 {
   display: flex;
@@ -143,7 +144,6 @@ form {
   }
   100% {
     opacity: 1;
-    height: 80%;
   }
 }
 .article-menu {
@@ -177,15 +177,12 @@ form {
 .menu .btn-menu {
   margin-right: -55px;
 }
-.menu:active {
-  cursor: pointer;
-}
-.menu:active .fa-effet {
-  animation: fa-effet 800ms forwards;
-}
 .menu:active .btn-menu {
   margin-right: 0;
   transition: 0.6s;
+}
+.menu:active .btn-menu .fa-effet {
+  animation: fa-effet 900ms forwards;
 }
 
 .--no-delay {
@@ -213,6 +210,11 @@ form {
   white-space: nowrap;
 }
 
+@keyframes fa-effet {
+  0% {
+    transform: rotate(2turn);
+  }
+}
 @keyframes menu-effet {
   from {
     opacity: 0;
@@ -241,11 +243,6 @@ form {
   to {
     opacity: 1;
     bottom: 0;
-  }
-}
-@keyframes fa-effet {
-  0% {
-    transform: rotate(2turn);
   }
 }
 .article-menu ul li article {
@@ -554,11 +551,9 @@ form {
 @keyframes fullHeart {
   0% {
     opacity: 0;
-    /*     height: 0%; */
   }
   100% {
     opacity: 1;
-    height: 80%;
   }
 }
 @media screen and (min-width: 768px) {
@@ -611,6 +606,7 @@ form {
 }
 .header {
   display: flex;
+  position: relative;
 }
 .header a {
   margin: auto 20px;
@@ -619,13 +615,15 @@ form {
   margin: 20px auto;
 }
 .header .logo--restaurant {
-  margin: 20px 30px 20px 30px;
+  margin: 20px auto;
 }
 
 @media screen and (min-width: 768px) {
-  .logo--restaurant {
-    margin: 20px auto !important;
-  }
+  /*   .logo {
+    &--restaurant {
+      margin: 20px auto !important;
+    }
+  } */
 }
 .footer {
   padding: 20px;
@@ -635,6 +633,8 @@ form {
   display: flex;
   flex-direction: column;
   row-gap: 5px;
+}
+.footer .liste-footer li a {
   color: #fff !important;
 }
 
