--- a/sass/directory/pages/_restaurant-page.scss
+++ b/sass/directory/pages/_restaurant-page.scss
@@ -2,18 +2,14 @@
   font-size: 1.5em;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-}
-
 .menu-main {
   display: flex;
   flex-direction: column;
+  position: relative;
   padding: 20px 10px 50px 10px;
   background-color: $light-grey;
   border-radius: 30px 30px 0 0;
-
+  z-index: 100;
   h1 {
     display: flex;
     overflow: hidden;
@@ -44,7 +40,6 @@ form {
 
   100% {
     opacity: 1;
-    height: 80%;
   }
 }
 
@@ -79,13 +74,12 @@ form {
     margin-right: -55px;
   }
   &:active {
-    cursor: pointer;
-    .fa-effet {
-      animation: fa-effet 800ms forwards;
-    }
     .btn-menu {
       margin-right: 0;
       transition: 0.6s;
+      .fa-effet {
+        animation: fa-effet 900ms forwards;
+      }
     }
   }
 }
@@ -110,6 +104,12 @@ form {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+@keyframes fa-effet {
+  0% {
+    transform: rotate(2turn);
+  }
 }
 
 @keyframes menu-effet {
@@ -140,11 +140,6 @@ form {
   to {
     opacity: 1;
     bottom: 0;
-  }
-}
-@keyframes fa-effet {
-  0% {
-    transform: rotate(2turn);
   }
 }
 
