--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,10 @@
-@import "directory/base/_base.scss";
-@import "directory/component/_variables.scss";
-@import "directory/component/_component.scss";
-@import "directory/component/_mixin.scss";
-@import "directory/component/_keyframes.scss";
-@import "directory/component/-background-image.scss";
-@import "directory/pages/_restaurant-page.scss";
-@import "directory/pages/_acceuil.scss";
-@import "directory/layout/_header.scss";
-@import "directory/layout/_footer.scss";
+@import "directory/base/base";
+@import "directory/component/variables";
+@import "directory/component/mixin";
+@import "directory/component/keyframes";
+@import "directory/component/component";
+@import "directory/component/background-image";
+@import "directory/layout/header";
+@import "directory/layout/footer";
+@import "directory/pages/restaurant-page";
+@import "directory/pages/acceuil";
