--- a/sass/directory/layout/_footer.scss
+++ b/sass/directory/layout/_footer.scss
@@ -12,6 +12,12 @@
   }
 }
 
+.--logo-footer {
+  color: #fff;
+  padding-bottom: 16px;
+  font-size: 22px;
+}
+
 .fa-utensils {
   margin-right: 15px;
 }
@@ -31,6 +37,7 @@
     }
   }
   .--logo-footer {
+    color: #fff;
     text-align: center;
   }
 }
