--- a/sass/directory/pages/_restaurant-page.scss
+++ b/sass/directory/pages/_restaurant-page.scss
@@ -32,17 +32,6 @@
   }
 }
 
-@keyframes fullHeart {
-  0% {
-    opacity: 0;
-    height: 0%;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
 .article-menu {
   display: flex;
   flex-direction: column;
@@ -73,7 +62,7 @@
   .btn-menu {
     margin-right: -55px;
   }
-  &:active {
+  &:hover {
     .btn-menu {
       margin-right: 0;
       transition: 0.6s;
@@ -104,43 +93,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-
-@keyframes fa-effet {
-  0% {
-    transform: rotate(2turn);
-  }
-}
-
-@keyframes menu-effet {
-  from {
-    opacity: 0;
-    bottom: -50px;
-  }
-  to {
-    opacity: 1;
-    bottom: 0;
-  }
-}
-@keyframes -delay {
-  from {
-    opacity: 0;
-    bottom: -50px;
-  }
-  to {
-    opacity: 1;
-    bottom: 0;
-  }
-}
-@keyframes -delay1 {
-  from {
-    opacity: 0;
-    bottom: -50px;
-  }
-  to {
-    opacity: 1;
-    bottom: 0;
-  }
 }
 
 .article-menu ul li article {
