--- a/sass/directory/component/_component.scss
+++ b/sass/directory/component/_component.scss
@@ -8,7 +8,7 @@
   font-weight: bold;
   text-align: center;
   background: $btn-color;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  @include shadow;
   color: #fff !important;
   align-self: center;
   overflow: hidden;
