--- a/sass/directory/pages/_acceuil.scss
+++ b/sass/directory/pages/_acceuil.scss
@@ -161,9 +161,7 @@
       background-color: #fff;
       border-radius: 0 0 15px 15px;
       overflow-y: hidden;
-      box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
-        rgba(0, 0, 0, 0.23) 0px 3px 6px;
-
+      @include shadow;
       .fa-heart {
         font-size: 1.5em;
         position: absolute;
@@ -202,8 +200,7 @@
       width: 28%;
       justify-content: center;
       align-items: center;
-      box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
-        rgba(0, 0, 0, 0.23) 0px 3px 6px;
+      @include shadow;
     }
   }
 
