--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ a:active {
   white-space: nowrap;
 }
 .menu-main h1 .fa-heart {
-  font-size: 1em;
+  font-size: 1.5em;
   position: absolute;
   right: 15px;
 }
@@ -416,13 +416,6 @@ a:active {
   justify-content: center;
   background-color: #f6f6f6;
 }
-.search-restaurant .localisation {
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: gainsboro;
-}
 .search-restaurant h2 {
   width: 80%;
   align-self: center;
@@ -430,6 +423,21 @@ a:active {
 }
 .search-restaurant p {
   text-align: center;
+}
+
+.localisation {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5edff;
+  font-weight: bold;
+}
+.localisation .fa-map-marker-alt {
+  margin-right: 15px;
+}
+.localisation span {
+  margin-left: 5px;
 }
 
 .fonctionnement {
@@ -610,6 +618,7 @@ a:active {
   display: flex;
   position: relative;
   background-color: #fff;
+  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
 }
 .header a {
   margin: auto 20px;
