--- a/sass/directory/layout/_header.scss
+++ b/sass/directory/layout/_header.scss
@@ -2,6 +2,7 @@
   display: flex;
   position: relative;
   background-color: #fff;
+  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
   a {
     margin: auto 20px;
   }
