--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url(./_mixin.scss);
 * {
   margin: 0;
   padding: 0;
@@ -55,7 +54,6 @@ a:active {
 @keyframes fullHeart {
   0% {
     opacity: 0;
-    height: 0%;
   }
   100% {
     opacity: 1;
@@ -229,7 +227,6 @@ a:active {
 }
 .menu-main h1 .heart {
   color: transparent;
-  animation-direction: alternate;
 }
 .menu-main h1 .heart:hover {
   animation: fullHeart 2s;
@@ -260,8 +257,8 @@ a:active {
   background-color: #fff;
   margin-bottom: 17px;
   border-radius: 15px;
-  overflow: hidden;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  overflow: hidden;
   cursor: pointer;
   position: relative;
 }
@@ -486,6 +483,7 @@ a:active {
 }
 .liste-fonctionnement .step:hover {
   background-color: #f5edff;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 6px 12px, rgba(0, 0, 0, 0.6) 0px 16px 12px;
 }
 .liste-fonctionnement .step:hover .fas {
   transition: 1s;
