--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ a:active {
     height: 0%;
   }
   50% {
-    height: 100%;
+    height: 50%;
   }
   75% {
     height: 100%;
@@ -138,19 +138,20 @@ a:active {
 }
 @keyframes loader {
   0% {
-    rotate: 2turn;
+    transform: rotate(2turn);
     height: 0;
-    left: 20%;
+    left: 30%;
   }
   90% {
     height: 200px;
   }
   50% {
-    scale: 1.8;
+    height: 400px;
+    width: 400px;
   }
   100% {
     left: 0;
-    scale: 1;
+    height: 200px;
   }
 }
 .btn {
@@ -168,7 +169,7 @@ a:active {
   transition: 800ms;
 }
 .btn:hover {
-  scale: 1.06;
+  transform: scale(1.06);
   filter: brightness(1.1);
   box-shadow: rgba(0, 0, 0, 0.16) 0px 6px 12px, rgba(0, 0, 0, 0.6) 0px 6px 12px;
 }
@@ -326,7 +327,7 @@ a:active {
 }
 
 .menu:hover {
-  scale: 1.02;
+  transform: scale(1.02);
 }
 
 @media screen and (min-width: 768px) {
@@ -524,7 +525,7 @@ a:active {
   position: relative;
 }
 .li-restaurant .card-restaurant:hover {
-  scale: 1.01;
+  transform: scale(1.01);
 }
 .li-restaurant .card-restaurant .nouveau {
   padding: 5px 8px;
