--- a/sass/directory/component/_component.scss
+++ b/sass/directory/component/_component.scss
@@ -12,7 +12,7 @@
   overflow: hidden;
   transition: 800ms;
   &:hover {
-    scale: 1.06;
+    transform: scale(1.06);
     filter: brightness(1.1);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 6px 12px,
       rgba(0, 0, 0, 0.6) 0px 6px 12px;
