--- a/sass/directory/component/_keyframes.scss
+++ b/sass/directory/component/_keyframes.scss
@@ -76,7 +76,7 @@
   }
 
   50% {
-    height: 100%;
+    height: 50%;
   }
 
   75% {
@@ -101,19 +101,20 @@
 }
 @keyframes loader {
   0% {
-    rotate: (2turn);
+    transform: rotate(2turn);
     height: 0;
-    left: 20%;
+    left: 30%;
   }
 
   90% {
     height: 200px;
   }
   50% {
-    scale: 1.8;
+    height: 400px;
+    width: 400px;
   }
   100% {
     left: 0;
-    scale: 1;
+    height: 200px;
   }
 }
