--- a/sass/directory/pages/_restaurant-page.scss
+++ b/sass/directory/pages/_restaurant-page.scss
@@ -123,7 +123,7 @@
   }
 }
 .menu:hover {
-  scale: 1.02;
+  transform: scale(1.02);
 }
 
 @media screen and (min-width: 768px) /* and (max-width: 1024px) */ {
