--- a/sass/directory/component/_keyframes.scss
+++ b/sass/directory/component/_keyframes.scss
@@ -84,6 +84,24 @@
   }
 }
 
+@-webkit-keyframes loader-inner {
+  0% {
+    height: 0%;
+  }
+
+  25% {
+    height: 0%;
+  }
+
+  50% {
+    height: 50%;
+  }
+
+  75% {
+    height: 100%;
+  }
+}
+
 @keyframes load-page {
   0% {
     margin-left: 0;
@@ -99,6 +117,22 @@
     opacity: 0;
   }
 }
+@-webkit-keyframes load-page {
+  0% {
+    margin-left: 0;
+    opacity: 100%;
+  }
+  40% {
+    margin-left: 0;
+  }
+  70% {
+    opacity: 100%;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 @keyframes loader {
   0% {
     transform: rotate(2turn);
@@ -112,6 +146,25 @@
   50% {
     height: 400px;
     width: 400px;
+  }
+  100% {
+    left: 0;
+    height: 200px;
+  }
+}
+
+@-webkit-keyframes loader {
+  0% {
+    transform: rotate(2turn);
+    height: 0;
+    left: 30%;
+  }
+
+  90% {
+    height: 200px;
+  }
+  50% {
+    transform: scale(2);
   }
   100% {
     left: 0;
