--- a/sass/directory/pages/_acceuil.scss
+++ b/sass/directory/pages/_acceuil.scss
@@ -119,7 +119,7 @@
 .fa-mobile-alt,
 .fa-list-ul,
 .fa-store {
-  margin-right: 20px;
+  margin-right: 5px;
   color: $footer-color;
 }
 
@@ -207,7 +207,7 @@
     column-gap: 30px;
     .step {
       height: 90px;
-      width: 28%;
+      width: 30%;
       justify-content: center;
       align-items: center;
       @include shadow;
@@ -236,5 +236,12 @@
 @media screen and (min-width: 1024px) {
   .li-restaurant {
     width: 22%;
+  }
+}
+@media screen and (min-width: 935px) {
+  .fa-mobile-alt,
+  .fa-list-ul,
+  .fa-store {
+    margin-right: 20px;
   }
 }
